--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <header>
-    <a href="">WEB<span>STUDIO</span></a><!--Logo header-->
     <nav>
+        <a href=”./index.html”>WebStudio</a><!--Logo header-->
         <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
@@ -15,66 +15,90 @@
         </ul>
     </nav>
     <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+        </ul>
     </address>
 </header>
 <main>
-    <h1>Effective Solutions<br>
-        for Your Business</h1>
-    <button type="button">Order Service</button>
     <section>
+        <h1>Effective Solutions
+            for Your Business</h1>
+        <button type="button">Order Service</button>
+    </section>
+    <section>
+        <h2>Core Values</h2>
         <ul>
             <li>
                 <h3>Strategy</h3>
                 <p>
-                    Our goal is to identify the business<br>
-                    problem to walk away with the<br>
+                    Our goal is to identify the business
+                    problem to walk away with the
                     perfect and creative solution.
                 </p>
             </li>
             <li>
                 <h3>Punctuality</h3>
                 <p>
-                    Bring the key message to the<br>
-                    brand's audience for the best price<br>
+                    Bring the key message to the
+                    brand's audience for the best price
                     within the shortest possible time.
                 </p>
             </li>
             <li>
                 <h3>Diligence</h3>
                 <p>
-                    Research and confirm brands that<br>
-                    present the strongest digital growth<br>
+                    Research and confirm brands that
+                    present the strongest digital growth
                     opportunities and minimize risk.
                 </p>
             </li>
             <li>
                 <h3>Technologies</h3>
                 <p>
-                    Design practice focused on digital<br>
-                    experiences. We bring forth a deep<br>
+                    Design practice focused on digital
+                    experiences. We bring forth a deep
                     passion for problem-solving.
                 </p>
             </li>
         </ul>
-
     </section>
     <section>
         <h2>Our Team</h2>
         <ul>
-            <li><img src="images/Team%20Card%201.jpg" alt="Mark Guerrero. Product Designer. Photo" width="150"></li>
-            <li><img src="images/Team%20Card%202.jpg" alt="Tom Ford. Frontend Developer. Photo" width="150"></li>
-            <li><img src="images/Team%20Card%203.jpg" alt="Camila Garcia. Marketing. Photo" width="150"></li>
-            <li><img src="images/Team%20Card%204.jpg" alt="Daniel Wilson. UI Designer. Photo" width="150"></li>
+            <li>
+                <img src="./images/team_card_1.jpg" alt="Mark Guerrero. Product Designer. Photo" width="264">
+                <h3>Mark Guerrero</h3>
+                <p>Product Designe</p>
+            </li>
+            <li>
+                <img src="./images/team_card_2.jpg" alt="Tom Ford. Frontend Developer. Photo" width="264">
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="./images/team_card_3.jpg" alt="Camila Garcia. Marketing. Photo" width="264">
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/team_card_4.jpg" alt="Daniel Wilson. UI Designer. Photo" width="264">
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </li>
         </ul>
     </section>
 </main>
 <footer>
-    <a href="">WEB<span>STUDIO</span></a><!--Logo footer-->
+    <a href=”./index.html”>WebStudio</a><!--Logo footer-->
     <p>
-        Increase the flow of customers and<br>
-        sales for your business with digital<br>
+        Increase the flow of customers and
+        sales for your business with digital
         marketing & growth solutions.
     </p>
 </footer>
