--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <header>
     <nav>
-        <a href=”./index.html”>WebStudio</a><!--Logo header-->
+        <a href="./index.html">WebStudio</a><!--Logo header-->
         <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
@@ -74,7 +74,7 @@
             <li>
                 <img src="./images/team_card_1.jpg" alt="Mark Guerrero. Product Designer. Photo" width="264">
                 <h3>Mark Guerrero</h3>
-                <p>Product Designe</p>
+                <p>Product Designer</p>
             </li>
             <li>
                 <img src="./images/team_card_2.jpg" alt="Tom Ford. Frontend Developer. Photo" width="264">
@@ -95,7 +95,7 @@
     </section>
 </main>
 <footer>
-    <a href=”./index.html”>WebStudio</a><!--Logo footer-->
+    <a href="./index.html">WebStudio</a><!--Logo footer-->
     <p>
         Increase the flow of customers and
         sales for your business with digital
